# Sapienta

./: .gitignore  CMakeLists.txt  LICENSE  README.md
velaris/include/velaris/render/: VectorRendererWidget.hpp
velaris/include/velaris/ui/: MainWindow.hpp
velaris/src/: main.cpp
velaris/src/render/: VectorRendererWidget.cpp
velaris/src/ui/: MainWindow.cpp
